# inline-c

./: .gitignore  .hlint.yaml  .travis.yml  README.md  c99.y  changelog.md  inline-c-cpp.cabal  inline-c.cabal  stack-lts-11.22.yaml  stack-lts-12.14.yaml  stack-lts-12.26.yaml  stack-lts-14.27.yaml  stack-lts-16.15.yaml  stack-lts-16.32.yaml  stack-lts-18.28.yaml  stack-lts-20.yaml  stack-lts-21.yaml  stack-nightly-2018-10-24.yaml  stack-nightly-2020-01-30.yaml  stack-nightly-2020-09-20.yaml  stack-nightly-2020-11-23.yaml  stack-nightly-2021-01-01.yaml  stack-nightly.yaml  stack.yaml  tutorial.md
.github/workflows/: ci.yaml
examples/: gsl-ode.hs
gsl-ode-example/: gsl-ode.cabal  gsl-ode.hs
inline-c/: LICENSE  README.md  changelog.md  inline-c.cabal  tests.hs
inline-c-cpp/: README.md  inline-c-cpp.cabal  test-error-message-line-numbers.sh
inline-c-cpp/cxx-src/: HaskellException.cxx  HaskellStablePtr.cxx
inline-c-cpp/include/: HaskellException.hxx  HaskellStablePtr.hxx
inline-c-cpp/src/Language/C/Inline/: Cpp.hs
inline-c-cpp/src/Language/C/Inline/Cpp/: Exception.hs  Exceptions.hs  Unsafe.hs
inline-c-cpp/test/: StdVector.hs  TemplateSpec.hs  test.h  tests.hs
inline-c-cuda/: README.md  inline-c-cuda.cabal
inline-c-cuda/src/Language/C/Inline/: Cuda.hs
inline-c-cuda/test/: tests.hs
inline-c-nag/: inline-c-nag.cabal
inline-c-nag/examples/: a02bac.hs  c06puce.hs  est-priors.hs  interpolation.hs  nelder-mead.hs  ode-runge-kutta.hs  ode.hs  one-dim-fft.hs
inline-c-nag/src/: Main.hs
inline-c-nag/src/Language/C/Inline/: Nag.hs  Nag.hsc
inline-c-nag/src/Language/C/Inline/Nag/: Internal.hsc
inline-c-nag/src/Language/C/Quote/: Nag.hs
inline-c-objc/: README.md  inline-c-objc.cabal
inline-c-objc/src/Language/C/Inline/: ObjC.hs
inline-c-objc/test/: tests.hs
inline-c/examples/: gsl-ode.hs
inline-c/src/Language/C/: Context.hs  Inline.hs  Types.hs
inline-c/src/Language/C/Inline/: Context.hs  Cpp.hs  FunPtr.hs  HaskellIdentifier.hs  Internal.hs  Interruptible.hs  Parse.hs  Spec.hs  Tests.hs  Unsafe.hs
inline-c/src/Language/C/Inline/Context/: Spec.hs
inline-c/src/Language/C/Inline/Cpp/: Internal.hs  Types.hs
inline-c/src/Language/C/Types/: Lex.hs  Parse.hs
inline-c/src/Language/C/Types/Parse/: Spec.hs
inline-c/test/: Dummy.hs  tests-cpp.hs  tests.hs
inline-c/test/Language/C/Inline/: ContextSpec.hs  ParseSpec.hs
inline-c/test/Language/C/Types/: ParseSpec.hs
inline-verilog/: README.md  inline-verilog.cabal
inline-verilog/src/Language/Verilog/: Inline.hs
inline-verilog/test/: tests.hs
nag/: nag.cabal
nag-examples/: nag-examples.cabal
nag-examples/data/: Makefile  c06puce.d  c06puce.r
nag-examples/src/: a02bac.hs
nag-test/: nag-test.cabal
nag-test/src/: Main.hs  c06puce.hs
nag/src/: Main.hs
nag/src/Language/C/Context/: Nag.hsc
sample-cabal-project/: .gitignore  sample-cabal-project.cabal  stack.yaml
sample-cabal-project/src/: Main.hs
sample-non-cabal/: .gitignore  TestModule.hs  build  clean  sample-non-cabal  sample-non-cabal.hs
sample-non-cabal/TestModule/: Nested.hs
src/Language/C/: Context.hs  Inline.hs  Types.hs
src/Language/C/Context/: Base.hs  Types.hs
src/Language/C/Inline/: Context.hs  Cpp.hs  FunPtr.hs  HaskellIdentifier.hs  Internal.hs  Interruptible.hs  Unsafe.hs
src/Language/C/Types/: Parse.hs
test/: tests.hs
test/Language/C/Inline/: ContextSpec.hs  ParseSpec.hs
test/Language/C/Types/: ParseSpec.hs
