name:                inline-c
version:             0.1.0.0
synopsis:            Let's you embed C code into Haskell.
-- description:         
license:             AllRightsReserved
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2015 FPComplete Corporation
-- copyright:           
category:            FFI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.C.Inline
                     , Language.C.Context
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all
  build-depends:       base >=4.7 && <4.8
                     , language-c-quote
                     , template-haskell
                     , mainland-pretty
                     , filepath
                     , directory
                     , uuid
                     , srcloc
                     , parsec
                     , utf8-string
                     , syb
                     , containers
                     , transformers
                     , raw-strings-qq
                     , hspec
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             unit-tests.hs
  build-depends:       base >=4.7 && <4.8
                     , inline-c
  hs-source-dirs:      tests