name:                inline-c
version:             0.1.0.0
synopsis:            Lets you embed C code into Haskell.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            FFI
build-type:          Simple
cabal-version:       >=1.10

flag gsl-example
  description:         Build GSL example
  default:             False

library
  exposed-modules:     Language.C.Inline
                     , Language.C.Inline.Internal
                     , Language.C.Inline.Context
                     , Language.C.Types
                     , Language.C.Types.Parse
  other-modules:       Language.C.Inline.FunPtr
  ghc-options:         -Wall
  build-depends:       base >=4 && <5
                     , QuickCheck
                     , ansi-wl-pprint
                     , binary
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , filepath
                     , mtl
                     , parsec >= 3
                     , parsers
                     , template-haskell >= 2.9
                     , transformers >= 0.1.3.0
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  c-sources:           test/tests.c
  build-depends:       base >=4 && <5
                     , ansi-wl-pprint
                     , containers
                     , hspec >= 2
                     , inline-c
                     , parsers
                     , QuickCheck
                     , raw-strings-qq
                     , regex-posix
                     , template-haskell
                     , transformers
                     , vector
  default-language:    Haskell2010

executable gsl-ode
  hs-source-dirs:      examples
  main-is:             gsl-ode.hs
  c-sources:           examples/gsl-ode.c
  build-depends:       base >=4 && <5
                     , inline-c
                     , vector
                     , Chart
                     , Chart-cairo
  default-language:    Haskell2010
  cc-options:          -O2
  extra-libraries:     gsl gslcblas m
  ghc-options:         -Wall -O
