name:                inline-c
version:             0.5.6.1
synopsis:            Write Haskell source files including C code inline. No FFI required.
description:         See <https://github.com/fpco/inline-c/blob/master/README.md>.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli, Mathieu Boespflug
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            FFI
tested-with:         GHC == 7.8.4, GHC == 7.10.1
build-type:          Simple
cabal-version:       >=1.10
Extra-Source-Files:  README.md, changelog.md

source-repository head
  type:     git
  location: https://github.com/fpco/inline-c

flag gsl-example
  description:         Build GSL example
  default:             False

library
  exposed-modules:     Language.C.Inline
                     , Language.C.Inline.Context
                     , Language.C.Inline.HaskellIdentifier
                     , Language.C.Inline.Internal
                     , Language.C.Inline.Unsafe
                     , Language.C.Inline.Interruptible
                     , Language.C.Types
                     , Language.C.Types.Parse
  other-modules:       Language.C.Inline.FunPtr
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , QuickCheck
                     , ansi-wl-pprint
                     , binary
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , filepath
                     , hashable
                     , mtl
                     , parsec >= 3
                     , parsers
                     , template-haskell >= 2.9
                     , transformers >= 0.1.3.0
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  c-sources:           test/tests.c
  other-modules:       Dummy
                     , Language.C.Inline.ContextSpec
                     , Language.C.Inline.ParseSpec
                     , Language.C.Types.ParseSpec
  build-depends:       base >=4 && <5
                     , ansi-wl-pprint
                     , containers
                     , hashable
                     , hspec >= 2
                     , inline-c
                     , parsers
                     , QuickCheck
                     , raw-strings-qq
                     , regex-posix
                     , template-haskell
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

executable gsl-ode
  hs-source-dirs:      examples
  main-is:             gsl-ode.hs
  c-sources:           examples/gsl-ode.c
  default-language:    Haskell2010
  extra-libraries:     gsl gslcblas m
  ghc-options:         -Wall

  if flag(gsl-example)
    buildable: True
    build-depends:     base >=4 && <5
                     , inline-c
                     , vector
                     , Chart >= 1.3
                     , Chart-cairo
  else
    buildable: False
