name:                gsl-ode
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable gsl-ode
  main-is:             gsl-ode.hs
  c-sources:           gsl-ode.c
  build-depends:       base >=4 && <5
                     , inline-c
                     , vector
                     , Chart
                     , Chart-cairo
  default-language:    Haskell2010
  cc-options:          -O2
  extra-libraries:     gsl gslcblas m
  ghc-options:         -Wall -O
