name:                inline-c-nag
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.C.Inline.Nag
                     , Language.C.Quote.Nag
  build-depends:       base >=4 && <5
                     , inline-c
                     , language-c-quote
                     , srcloc
                     , template-haskell
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        /opt/NAG/cll6i24dcl/include

-- Examples

executable a02bac
  hs-source-dirs:      examples
  main-is:             a02bac.hs
  c-sources:           examples/a02bac.c
  build-depends:       base >=4 && <5
                     , inline-c
                     , language-c-quote
                     , inline-c-nag
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include

executable c06puce
  hs-source-dirs:      examples
  main-is:             c06puce.hs
  c-sources:           examples/c06puce.c
  build-depends:       base >=4 && <5
                     , array
                     , inline-c
                     , inline-c-nag
                     , language-c-quote
                     , raw-strings-qq
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include

executable est-priors
  hs-source-dirs:      examples
  main-is:             est-priors.hs
  c-sources:           examples/est-priors.c
  build-depends:       base >=4 && <5
                     , array
                     , inline-c
                     , inline-c-nag
                     , vector
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
