name:                inline-c-nag
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            Math
build-type:          Simple
cabal-version:       >=1.10

flag examples
  description:         Build examples
  default:             False

library
  exposed-modules:     Language.C.Inline.Nag
  other-modules:       Language.C.Inline.Nag.Internal
  c-sources:           src/Language/C/Inline/Nag.c
  build-depends:       base >=4 && <5
                     , inline-c
                     , template-haskell
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -O -fPIC
  cc-options:          -O2 -m64

-- Examples

executable a02bac
  hs-source-dirs:      examples
  main-is:             a02bac.hs
  c-sources:           examples/a02bac.c
  build-depends:       base >=4 && <5
                     , inline-c
                     , inline-c-nag
                     , raw-strings-qq
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -O -fPIC

  if flag(examples)
    buildable: True
  else
    buildable: False

executable c06puce
  hs-source-dirs:      examples
  main-is:             c06puce.hs
  c-sources:           examples/c06puce.c
  build-depends:       base >=4 && <5
                     , array
                     , inline-c
                     , inline-c-nag
                     , raw-strings-qq
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -O -fPIC

  if flag(examples)
    buildable: True
  else
    buildable: False

executable est-priors
  hs-source-dirs:      examples
  main-is:             est-priors.hs
  c-sources:           examples/est-priors.c
  build-depends:       base >=4 && <5
                     , array
                     , inline-c
                     , inline-c-nag
                     , vector
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
  ghc-options:         -Wall -O -fPIC

  if flag(examples)
    buildable: True
  else
    buildable: False
