cabal-version:       2.2
name:                inline-c-objc
version:             0.1.0.0
synopsis:            Lets you embed Objective-C code into Haskell.
description:         Utilities to inline Objective-C code into Haskell using inline-c.  See
                     tests for example on how to build.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2015-2016 FP Complete Corporation, (c) 2017-2023 Francesco Mazzoli
category:            FFI
tested-with:         GHC == 9.2.7
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/fpco/inline-c

library
  exposed-modules:     Language.C.Inline.ObjC
  build-depends:       base >=4.7 && <5
                     , inline-c >= 0.9.1.5
                     , template-haskell
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base >=4 && <5
                     , inline-c
                     , inline-c-objc
                     , hspec
  default-language:    Haskell2010
  if os(darwin)
    frameworks:        Foundation
