name:                inline-c
version:             0.1.0.0
synopsis:            Lets you embed C code into Haskell.
license:             AllRightsReserved
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            FFI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.C.Inline
                     , Language.C.Inline.Spec
                     , Language.C.Inline.Context
                     , Language.C.Inline.Context.Spec
                     , Language.C.Types
                     , Language.C.Types.Parse
                     , Language.C.Types.Parse.Spec
  other-modules:       Language.C.Inline.Parse
                     , Language.C.Inline.FunPtr
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all
  build-depends:       base >=4 && <5
                     , QuickCheck
                     , ansi-wl-pprint
                     , containers
                     , directory
                     , filepath
                     , hspec >= 2
                     , hspec-smallcheck
                     , lens
                     , logict
                     , mtl
                     , parsec >= 3
                     , parsers
                     , raw-strings-qq
                     , smallcheck
                     , template-haskell >= 2.9
                     , transformers >= 0.1.3.0
                     , unordered-containers
                     , uuid
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  c-sources:           tests.c
  build-depends:       base >=4 && <5
                     , hspec
                     , inline-c
                     , raw-strings-qq
                     , template-haskell
                     , vector
  default-language:    Haskell2010
