name:                inline-c
version:             0.1.0.0
synopsis:            Lets you embed C code into Haskell.
license:             AllRightsReserved
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
category:            FFI
build-type:          Simple
cabal-version:       >=1.10

-- flag odeint-examples
--   description:         Build odeint examples
--   default:             False

library
  exposed-modules:     Language.C.Inline
                     , Language.C.Inline.Internal
                     , Language.C.Inline.Context
                     , Language.C.Inline.Cpp
                     , Language.C.Types
                     , Language.C.Types.Parse
  other-modules:       Language.C.Inline.FunPtr
  ghc-options:         -Wall -O
  ghc-prof-options:    -auto-all
  build-depends:       base >=4 && <5
                     , QuickCheck
                     , ansi-wl-pprint
                     , binary
                     , containers
                     , cryptohash
                     , directory
                     , filepath
                     , mtl
                     , parsec >= 3
                     , parsers
                     , template-haskell >= 2.9
                     , transformers >= 0.1.3.0
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  c-sources:           test/tests.c
  build-depends:       base >=4 && <5
                     , ansi-wl-pprint
                     , containers
                     , hspec
                     , hspec >= 2
                     , inline-c
                     , parsers
                     , QuickCheck
                     , raw-strings-qq
                     , regex-posix
                     , template-haskell
                     , transformers
                     , vector
  default-language:    Haskell2010

test-suite tests-cpp
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests-cpp.hs
  c-sources:           test/tests-cpp.cpp
  build-depends:       base >=4 && <5
                     , inline-c
  default-language:    Haskell2010
  extra-libraries:     stdc++

-- executable lorenz
--   hs-source-dirs:      examples
--   main-is:             lorenz.hs
--   c-sources:           examples/lorenz.cpp
--   build-depends:       base >= 4 && <5
--                      , inline-c
--                      , raw-strings-qq
--                      , vector
--   default-language:    Haskell2010
--   extra-libraries:     stdc++
--   cc-options:          -std=c++11
--   ghc-options:         -Wall -O2

--   if flag(odeint-examples)
--     buildable: True
--   else
--     buildable: False
