name:                inline-c
version:             0.9.0.0
synopsis:            Write Haskell source files including C code inline. No FFI required.
description:         See <https://github.com/fpco/inline-c/blob/master/README.md>.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli, Mathieu Boespflug
maintainer:          f@mazzo.li
copyright:           (c) 2015-2016 FP Complete Corporation, (c) 2017-2019 Francesco Mazzoli
category:            FFI
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5
build-type:          Simple
cabal-version:       >=1.10
Extra-Source-Files:  README.md, changelog.md

source-repository head
  type:     git
  location: https://github.com/fpco/inline-c

flag gsl-example
  description:         Build GSL example
  default:             False

library
  exposed-modules:     Language.C.Inline
                     , Language.C.Inline.Context
                     , Language.C.Inline.HaskellIdentifier
                     , Language.C.Inline.Internal
                     , Language.C.Inline.Unsafe
                     , Language.C.Inline.Interruptible
                     , Language.C.Types
                     , Language.C.Types.Parse
  other-modules:       Language.C.Inline.FunPtr
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , ansi-wl-pprint >= 0.6.8
                     , bytestring
                     , containers
                     , hashable
                     , mtl
                     , parsec >= 3
                     , parsers
                     , template-haskell >= 2.12.0.0
                     , transformers >= 0.1.3.0
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  other-modules:       Dummy
                     , Language.C.Inline.ContextSpec
                     , Language.C.Inline.ParseSpec
                     , Language.C.Types.ParseSpec
  build-depends:       base >=4 && <5
                     , QuickCheck
                     , ansi-wl-pprint
                     , containers
                     , hashable
                     , hspec >= 2
                     , inline-c
                     , parsers
                     , QuickCheck
                     , raw-strings-qq
                     , regex-posix
                     , template-haskell
                     , transformers
                     , unordered-containers
                     , vector
                     , split
  default-language:    Haskell2010
  ghc-options:         -Wall
  cc-options:          -Wall -Werror

executable gsl-ode
  hs-source-dirs:      examples
  main-is:             gsl-ode.hs
  default-language:    Haskell2010
  extra-libraries:     gsl gslcblas m
  ghc-options:         -Wall
  cc-options:          -Wall -Werror

  if flag(gsl-example)
    buildable: True
    build-depends:     base >=4 && <5
                     , inline-c
                     , vector
                     , Chart >= 1.3
                     , Chart-cairo
  else
    buildable: False
