cabal-version:       2.2
name:                inline-verilog
version:             0.1.0.0
synopsis:            Lets you embed Verilog code into Haskell.
description:         Utilities to inline Verilog code into Haskell using inline-c.  See
                     tests for example on how to build.
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2025 Francesco Mazzoli
category:            FFI
tested-with:         GHC == 9.2.8, GHC == 9.4.7, GHC == 9.6.2
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/fpco/inline-c

library
  exposed-modules:     Language.Verilog.Inline
  build-depends:       base >=4.7 && <5
                     , bytestring
                     , inline-c >= 0.9.0.0
                     , inline-c-cpp
                     , template-haskell
                     , text
                     , process
                     , temporary
                     , raw-strings-qq
                     , parsec
                     , parsers
                     , unordered-containers
                     , aeson
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base >=4 && <5
                     , bytestring
                     , inline-c
                     , inline-verilog
                     , hspec
                     , containers
                     , template-haskell
                     , vector
                     , raw-strings-qq
                     , QuickCheck
  default-language:    Haskell2010
